# TESS_pipeline_for_TTV

./: .gitignore  README.md  ppl.py  pyproject.toml
data/: exofop_tess.csv
examples/output/tic_262746281_index_0/mode1/: latest
examples/output/tic_262746281_index_0/mode1/runs/20260517-201503/: summary.json
examples/output/tic_91987762_index_10/mode1/: latest
examples/output/tic_91987762_index_10/mode1/runs/20260517-201502/: summary.json
examples/output/tic_91987762_index_10/mode1/runs/20260517-201502/slurm/: slurm_18314310_10.err
examples/output/tic_9348006_index_6/mode1/: latest
examples/output/tic_9348006_index_6/mode1/runs/20260517-201504/: summary.json
scripts/: mcmc_ast.sbatch
tesspipe/: __init__.py  arviz_runtime.py  data_display.py  download.py  env_utils.py  model_build.py  transit_window.py
tesspipe/modes/: __init__.py  mode0.py  mode1.py  mode3.py  noise.py
