[project]
name = "ttv-analysis-tess"
version = "0.1.0"
description = "TESS warm-Jupiter transit timing variation pipeline (modes 0, 1, 3)"
requires-python = ">=3.12"
dependencies = [
    "arviz==0.23.4",
    "jax==0.9.0.1",
    "jaxoplanet==0.1.0",
    "lightkurve==2.5.1",
    "numba==0.64.0",
    "numpy==2.4.2",
    "numpyro==0.20.0",
    "pandas==3.0.0",
    "scipy==1.17.0",
    "tinygp==0.3.0",
    "transitleastsquares==1.32",
]
